--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "egg-ci": "^1.11.0",
     "egg-mock": "^3.21.0",
     "eslint": "^5.13.0",
-    "eslint-config-egg": "^7.1.0"
+    "eslint-config-egg": "^7.1.0",
+    "eslint-plugin-react-hooks": "^4.2.0"
   },
   "engines": {
     "node": ">=10.0.0"
   },
   "scripts": {
-    "start": "egg-scripts start --daemon --title=egg-server-magical-cli-server",
+    "start": "egg-scripts start --daemon --title=egg-server-magical-cli-server --ignore-stderr",
     "stop": "egg-scripts stop --title=egg-server-magical-cli-server",
     "dev": "egg-bin dev",
     "debug": "egg-bin debug",
