fix: 修改安装依赖命令为 yarn install

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,9 @@
 {
-  "extends": "eslint-config-egg",
-  "rules": {
-    "linebreak-style": [
-      "error",
-      "unix"
-    ]
-  }
+  "extends": "eslint-config-egg"
+  // "rules": {
+  //   "linebreak-style": [
+  //     "error",
+  //     "unix"
+  //   ]
+  // }
 }
