--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "node": ">=10.0.0"
   },
   "scripts": {
+    "start:pm2": "pm2 start pm2.config.js",
     "start": "egg-scripts start --daemon --title=egg-server-magical-cli-server",
     "stop": "egg-scripts stop --title=egg-server-magical-cli-server",
     "dev": "egg-bin dev",
